fix: perbaiki syntax error pada controller dan logika pencarian yang tertukar